deploy/yamls/s1/s3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: go-sample-site
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: web
  type: ClusterIP
