deploy/yamls/s1/s3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-sample-site
spec:
  rules:
    - host: $EnvName$-go-sample-site.app.8slan.com
      http:
        paths:
          - backend:
              serviceName: go-sample-site
              servicePort: 8080
            path: /
